--- a/app/src/main/res/layout/activity_pet_rank.xml
+++ b/app/src/main/res/layout/activity_pet_rank.xml
@@ -1,20 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".PetRank">
 
-    <include android:id="@+id/toolbar_rank_caller"
-        layout="@layout/toolbar_rank"/>
+    <include
+        android:id="@+id/miActionBar"
+        layout="@layout/actionbar"
+        > </include>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rank_recyclerview"
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:translationY="?attr/actionBarSize"
+        >
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            > </com.google.android.material.tabs.TabLayout>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="45dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        > </androidx.viewpager.widget.ViewPager>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
