--- a/app/src/main/res/layout/cardview_pet.xml
+++ b/app/src/main/res/layout/cardview_pet.xml
@@ -1,71 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.cardview.widget.CardView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/main_cardview"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-app:cardCornerRadius="6dp"
-android:background="@color/colorPrimaryLight"
-android:layout_marginTop="3dp"
-android:elevation="6dp">
-
-<LinearLayout
-    android:layout_width="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_width="340dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_centerInParent="false"
+    android:layout_centerHorizontal="false"
+    android:layout_centerVertical="false"
     android:layout_gravity="center_horizontal"
-    android:background="@color/colorPrimaryLight">
+    android:layout_marginBottom="@dimen/cardview_compat_inset_shadow"
+    cardview:cardCornerRadius="@dimen/cardview_default_radius">
 
-    <ImageView
-        android:id="@+id/image_main_cardview"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:src="@drawable/anahisalgado2_thumb" />
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="340dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageButton
-            android:id="@+id/imagebutton_main_cardview"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/icons8_taz_n_del_perro_100"
-            android:padding="3dp"
-            />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/photo_imageview"
+            android:layout_width="340dp"
+            android:layout_height="340dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/anahisalgado2_thumb" />
 
-        <TextView
-            android:id="@+id/title_main_cardview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="3dp"
-            android:text="Anahí"
-            android:textSize="25dp"
-            app:fontFamily="@font/medium_italic" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/rank_main_cardview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical|end"
-            android:text="3"
-            android:textSize="25dp"
-            android:fontFamily="@font/medium_italic"
-            android:layout_marginLeft="75dp"/>
-        <ImageView
-            android:id="@+id/bone_main_cardview"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/icons8_taz_n_del_perrof_100"
-            android:padding="3dp"
-            />
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/like_button"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/icons8_hueso_del_perro_48" />
 
-</LinearLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/name_text"
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/cardview_name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/rank_text"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/cardview_rank"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/icons8_star_logo_48" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.cardview.widget.CardView>
