--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8BC34A</color>
-    <color name="colorPrimaryDark">#689F38</color>
-    <color name="colorAccent">#536DFE</color>
-    <color name="colorPrimaryLight">#DCEDC8</color>
-    <color name="colorPrimaryText">#212121</color>
-    <color name="colorSecondaryText">#757575</color>
-    <color name="colorDivider">#BDBDBD</color>
+    <color name="colorPrimary">#7EC65C</color>
+    <color name="colorPrimaryDark">#BEF4A2</color>
+    <color name="colorAccent">#0EAFD2</color>
+    <color name="colorTextIcons">#FFFFFF</color>
+    <color name="colorErrorSnackBar">#F30909</color>
+    <color name="ic_launcher_mascotas_background">#FFFFFF</color>
 </resources>
